--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="quiz-container">
-        <h1>Quiz de Arte - GG Gatinho</h1>
+        <h1>Quiz de Arte - Projeto Faculdade</h1>
         <form id="quiz-form">
             <div class="input-group">
                 <label for="nome">Digite seu nome:</label>
